# TicTactics

./: .gitignore  BetrachtungTreeRedundancy.txt  Board.cpp  Board.hpp  CMakeLists.txt  Debug.hpp  EngineController.cpp  EngineController.hpp  ExampleCommunication.in  ExampleCommunication2.in  GameState.cpp  GameState.hpp  Input.cpp  Input.hpp  Move.cpp  Move.hpp  Output.cpp  Output.hpp  Protokoll.txt  README.md  Rating.cpp  Rating.hpp  RatingTable.h  Searcher.cpp  Searcher.hpp  TTTP.cpp  TTTP.hpp  TableGeneration.py  WinMoveTable.h  main.cpp  types.hpp
